data/synmetrix/overlays/production/patches/external-database-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synmetrix-hasura
spec:
  template:
    spec:
      containers:
      - name: hasura
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synmetrix-cubejs
spec:
  template:
    spec:
      containers:
      - name: cubejs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synmetrix-actions
spec:
  template:
    spec:
      containers:
      - name: actions
