data/synmetrix/overlays/production/patches/hasura-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synmetrix-hasura
spec:
  template:
    spec:
      containers:
        - name: hasura
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 1000m
              memory: 1Gi
